foot fixed from overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,11 +252,11 @@ nav h1 a {
   width: 100%;
 }
 
-.inside #footer {
+/*.inside #footer {
   bottom: 0;
   position: absolute;
   width: 100%;
-}
+}*/
 
 #restaurant-name {
   color: #a85900;
